tests/cli/manage/snapshots/cli__manage__branch_management_unmanage.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-A is now unmanaged by GHerrit.
