tests/cli/manage/snapshots/cli__manage__manage_detached_head.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Cannot get management state in detached HEAD
