tests/cli/manage/snapshots/cli__manage__manage_drift_attempt_switch.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Configuration drift detected for branch drift-feature.
[gherrit] [WARN] The current git configuration does not match the expected state for a private branch.
[gherrit] [WARN]   - pushRemote: current='origin', expected='.'
[gherrit] [WARN] Use --force to overwrite manual changes.
