tests/cli/manage/snapshots/cli__manage__manage_drift_init.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch drift-feature is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will publish the stack without pushing drift-feature itself.
