tests/cli/manage/snapshots/cli__manage__manage_invalid_config.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Invalid gherritManaged value. Expected managedPublic, managedPrivate, or false.
