tests/cli/manage/snapshots/cli__manage__manage_mutually_exclusive.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 2

STDOUT:
(empty)

STDERR:
error: the argument '--public' cannot be used with '--private'

Usage: gherrit manage --public

For more information, try '--help'.
