tests/cli/manage/snapshots/cli__manage__manage_toggle_init_private.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch visibility-feature is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will publish the stack without projecting visibility-feature to the push destination.
