tests/cli/manage/snapshots/cli__manage__rebase_detection_manage.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-rebase is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will publish the stack without pushing feature-rebase itself.
